# dclaw-meet

./: .env.example  .gitignore  AGENTS.md  PLAN-v1.2.md  PLAN-v1.3.md  PRODUCT-SPEC.md  README.md  REVISED-PRD.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routes/: health.py
backend/app/api/v1/: meet.py
backend/app/core/: config.py
backend/app/models/: __init__.py  meet.py
backend/app/repositories/: meet.py
backend/app/schemas/: meet.py
backend/tests/: conftest.py  test_meet.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md
docs/releases/: index.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
frontend/: Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/rooms/: page.tsx
frontend/src/lib/: api.ts
graphifyy/: LICENSE  README.md  pyproject.toml
graphifyy/graphifyy/: __init__.py  main.py
graphifyy/tests/: test_graphifyy.py
helm/: Chart.yaml  values.yaml
helm/dclaw-meet/: Chart.yaml  values.yaml
helm/dclaw-meet/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/: secrets.yaml
vault/: README.md
vault/Notes/Architecture Decision Records/: Meeting Domain Model.md  SQLite for Local Dev.md
vault/Templates/: ADR.md  Daily Note.md
(+1 files in other folders)
