[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphifyy"
version = "0.1.0"
description = "Knowledge graph builder for local Obsidian vaults"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "satish1432", email = "satish.manpuri@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
graphifyy = "graphifyy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphifyy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
